tests/NormalTests/paczka1/fuzzy1/11731175.err
Error in line 8: Z6h06KKU S601 48,5
Error in line 18: UByw1g1 S718 4,6
Error in line 36: UByw1g1 S718 81,66
Error in line 33: Jsr S718 3,7
